Ruby panel: Fix mobile scroll and close button, align with HP styles

--- a/assets/side-drawer.css
+++ b/assets/side-drawer.css
@@ -78,12 +78,6 @@ side-drawer.side-drawer--from-right.is-closing .drawer__inner {
   animation-duration: 0.9s;
 }
 
-@media only screen and (max-width: 767px) {
-  #side-drawer-ruby-signature .drawer__inner {
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
-  }
-}
 
 side-drawer.side-drawer--from-left.is-open .drawer__inner {
   visibility: visible;
@@ -257,6 +251,12 @@ side-drawer .drawer__close svg {
   width: 24px;
   height: 24px;
   stroke-width: 1;
+}
+
+side-drawer .drawer__body {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 side-drawer .drawer__content-wrapper {
